--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,9 +36,10 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+div {
   font-family: "Inter", sans-serif;
-}
+} 
 
 @layer components {
   .navbar {
@@ -48,7 +49,7 @@ p {
   }
 
   .navbar a {
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
     font-size: 1.5em;
     font-style: normal;
     font-weight: 500;
