--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,7 +39,7 @@ h6,
 p,
 div {
   font-family: "Inter", sans-serif;
-} 
+}
 
 @layer components {
   .navbar {
@@ -50,7 +50,7 @@ div {
 
   .navbar a {
     font-family: "Inter", sans-serif;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
